update the changes

--- a/week2_lab/assignment1/index.html
+++ b/week2_lab/assignment1/index.html
@@ -28,7 +28,7 @@
         <form action="">
             <label for="name">Name</label>
             <input type="text" id="name" name="name" placeholder="Name"><br>
-            <label for="email">Email Dzhuss - pusss</label>
+            <label for="email">Email</label>
             <input type="email" id="email" name="email" placeholder="Email"><br>
             <button type="submit">Submit</button>
         </form>
