update the changes

--- a/week2_lab/assignment1/index.html
+++ b/week2_lab/assignment1/index.html
@@ -24,6 +24,12 @@
              online, blending creativity with technical skills. My goal is to apply my knowledge to 
              build applications and initiatives that make a positive difference in my community.</p>
         
+        <!-- Social Media Links -->
+        <div class="social-media">
+            <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a> |
+            <a href="https://www.instagram.com/" target="_blank">Instagram</a> |
+            <a href="https://www.facebook.com/" target="_blank">Facebook</a>
+        </div>
 
         <form action="">
             <label for="name">Name</label>
